[package]
name = "mls_ds"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
actix-web = "4.10.2"
diesel = { version = "2.2.8", features = [
    "postgres",
    "postgres_backend",
    "serde_json",
    "time",
    "uuid",
] }
diesel-async = { version = "0.5.2", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
uuid = { version = "1.16.0", features = ["v7"] }
