[package]
name = "mls_ds"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.10.2"
base64 = "0.22.1"
bb8 = "0.9.0"
diesel = { version = "2.2.8", features = [
    "postgres",
    "postgres_backend",
    "serde_json",
    "time",
    "uuid",
] }
diesel-async = { version = "0.5.2", features = ["bb8", "pool", "postgres"] }
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
openmls = "0.6.0"
openmls_rust_crypto = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
uuid = { version = "1.16.0", features = ["v7"] }

